# oxygine-chess

./: .gitignore  README.md
data/: res.xml
proj.android/: AndroidManifest.xml  build.bat  build.sh  build.xml  install.bat  install.sh  project.properties
proj.android/jni/src/: Android.mk
proj.android/res/values/: strings.xml
proj.android/src/org/oxygine/oxygine-chess/: MainActivity.java
proj.cmake/: CMakeLists.txt  run.sh
proj.emscripten/: CMakeLists.txt  build.bat  build_release.bat
proj.ios/oxygine-chess_ios.xcodeproj/: project.pbxproj
proj.macosx/oxygine-chess_macosx.xcodeproj/: project.pbxproj
proj.win32/: oxygine-chess.sln  oxygine-chess.vcxproj  oxygine-chess.vcxproj.filters
src/: Chessboard.h  Piece.cpp  Piece.h  chessboard.cpp  example.cpp  main.cpp  oxygine-chess.cpp  oxygine-chess.h
